# EasyTimer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  EasyTimer.cpp  EasyTimer.h  Timer.cpp  Timer.h
test/: CMakeLists.txt  EasyTimerTs.cpp
